@@ -11,7 +11,7 @@
 
 /* #define MAL_ATOM_DEBUG  */
 
-mal_export int malAtomSize(int size, int align, char *name);
+mal_export int malAtomSize(int size, const char *name);
 mal_export void mal_atom_reset(void);
 
 #endif /*  _MAL_ATOM_H*/
