@@ -2258,7 +2258,7 @@ str logger_create_wrap(logger *L, int *debug, str *fn, str *dirname, int *versio
 str logger_destroy_wrap(void *ret, logger *L);
 str lookupRef;
 str mal2str(MalBlkPtr mb, int first, int last);
-int malAtomSize(int size, int align, char *name);
+int malAtomSize(int size, const char *name);
 str malBootstrap(void);
 str malCommandCall(MalStkPtr stk, InstrPtr pci);
 str malInclude(Client c, str name, int listing);
